fixed bug with columns wrapping

--- a/src/app/components/case-explorer/case-explorer.component.scss
+++ b/src/app/components/case-explorer/case-explorer.component.scss
@@ -41,3 +41,24 @@ table {
 .no-records-found-text{
   padding: 16px; font-weight: bold;
 }
+
+.mat-column-dob {
+  white-space: nowrap;
+}
+
+.mat-column-dob {
+  white-space: nowrap;
+}
+
+.mat-column-lastUpdated{
+  white-space: nowrap;
+}
+
+.mat-column-initialReportDate{
+  white-space: nowrap;
+}
+
+.mat-column-phone{
+  white-space: nowrap;
+}
+
